<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.OtpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/backotp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_back" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gothambold"
        android:text="@string/enter_code_sent_to"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backotp" />

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gothammedium"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="+91-9161933331" />

    <TextView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothamlight"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/phonenumber"
        app:layout_constraintTop_toTopOf="@+id/phonenumber" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/otp1"
                android:background="none"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gothammedium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/otp2"
                android:background="none"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gothammedium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/otp3"
                android:background="none"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gothammedium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/otp4"
                android:background="none"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gothammedium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/otp5"
                android:background="none"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gothammedium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/otp6"
                android:background="none"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gothammedium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="1" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/didnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/gothambook"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/resend"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/gothambold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text=" 0:30" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/otpnext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gothambold"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>